[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Yauheni Kartavykh <longedok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
