[tool.poetry]
name = "bot"
version = "0.1.0-alpha.0"
description = ""
authors = ["Yauheni Kartavykh <longedok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
psycopg2 = "^2.8.6"
alembic = "^1.5.4"
pytimeparse = "^1.1.8"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
sqlalchemy-stubs = "^0.4"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
requests-mock = "^1.8.0"
ipython = "^7.20.0"
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
